--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-html-pages-renderer",
-  "version": "1.3.0",
+  "version": "1.5.0",
   "description": "HtmlPagesRenderer",
   "main": "lib/HtmlPagesRenderer.js",
   "author": "Roman Samec",
@@ -26,6 +26,8 @@
     "react": "^0.14.0",
     "react-component-gulp-tasks": "^0.7.6",
     "react-dom": "^0.14.0",
+    "react-mfb": "^0.3.0",
+    "react-photo-widget-factory": "^1.2.0",
     "react-router": "^2.0.0-rc5"
   },
   "peerDependencies": {
