--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-html-pages-renderer",
-  "version": "1.5.2",
+  "version": "1.5.3",
   "description": "HtmlPagesRenderer",
   "main": "lib/HtmlPagesRenderer.js",
   "author": "Roman Samec",
@@ -28,7 +28,8 @@
     "react-dom": "^0.14.0",
     "react-joyride": "^1.1.1",
     "react-mfb": "^0.3.0",
-    "react-photo-widget-factory": "^1.2.0",
+    "react-pathjs-chart": "^0.3.4",
+    "react-photo-widget-factory": "^1.2.1",
     "react-router": "^2.0.0-rc5"
   },
   "peerDependencies": {
