--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-html-pages-renderer",
-  "version": "1.6.0",
+  "version": "1.6.1",
   "description": "HtmlPagesRenderer",
   "main": "lib/HtmlPagesRenderer.js",
   "author": "Roman Samec",
@@ -27,6 +27,7 @@
     "react-component-gulp-tasks": "^0.7.6",
     "react-dom": "^0.14.0",
     "react-joyride": "^1.1.1",
+    "react-loader": "^2.2.0",
     "react-mfb": "^0.3.0",
     "react-pathjs-chart": "^0.3.4",
     "react-photo-widget-factory": "^1.2.2",
