--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-html-pages-renderer",
-  "version": "1.6.2",
+  "version": "1.6.3",
   "description": "HtmlPagesRenderer",
   "main": "lib/HtmlPagesRenderer.js",
   "author": "Roman Samec",
@@ -31,7 +31,9 @@
     "react-mfb": "^0.3.0",
     "react-pathjs-chart": "^0.3.4",
     "react-photo-widget-factory": "^1.2.2",
-    "react-router": "^2.0.0-rc5"
+    "react-router": "^2.0.0-rc5",
+    "react-swipe-views": "0.0.11",
+    "react-flexr": "^2.1.0-beta"
   },
   "peerDependencies": {
     "react": "^0.14.0"
