--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-html-pages-renderer",
-  "version": "1.8.2",
+  "version": "2.0.0",
   "description": "HtmlPagesRenderer",
   "main": "lib/HtmlPagesRenderer.js",
   "author": "Roman Samec",
@@ -15,18 +15,29 @@
   "dependencies": {
     "classnames": "^2.1.2",
     "lodash": "^4.2.1",
-    "react-binding": "^0.7.5",
     "traverse": "^0.6.6"
   },
   "devDependencies": {
+    "@types/jasmine": "^2.5.38",
+    "@types/lodash": "^4.14.43",
+    "@types/node": "^6.0.52",
     "babel-eslint": "^4.1.3",
+    "babel-jest": "^18.0.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
     "eslint": "^1.6.0",
     "eslint-plugin-react": "^3.5.1",
+    "freezer-js": "^0.11.2",
     "gulp": "^3.9.0",
-    "react": "^0.14.8",
+    "install": "^0.8.4",
+    "jest": "^18.0.0",
+    "jest-cli": "^18.0.0",
+    "mobx": "^2.6.4",
+    "react": "^15.4.1",
+    "react-binding": "^0.7.5",
     "react-component-gulp-tasks": "^0.7.6",
-    "react-dom": "^0.14.0",
-    "react-flexr": "^2.1.0-beta",
+    "react-dom": "^15.4.1",
+    "react-flexr": "^2.1.2",
     "react-helmet": "^3.1.0",
     "react-input-range": "^0.8.0",
     "react-joyride": "^1.1.1",
@@ -36,10 +47,12 @@
     "react-photo-widget-factory": "^1.2.3",
     "react-router": "^2.0.0-rc5",
     "react-swipe": "^5.0.3",
+    "react-test-renderer": "^15.4.1",
     "swipe-js-iso": "^2.0.3"
   },
   "peerDependencies": {
-    "react": "^0.14.0"
+    "react": "^15.4.1",
+    "react-dom": "^15.4.1"
   },
   "browserify-shim": {
     "react": "global:React"
@@ -51,11 +64,14 @@
     "publish:site": "NODE_ENV=production gulp publish:examples",
     "release": "NODE_ENV=production gulp release",
     "start": "gulp dev",
-    "test": "echo \"no tests yet\" && exit 0",
+    "test": "jest",
     "watch": "gulp watch:lib"
   },
   "keywords": [
     "react",
     "react-component"
-  ]
+  ],
+  "jest": {
+    "testEnvironment": "node"
+  }
 }
